# deckcontroller

./: .gitignore  CMakeLists.txt  README.md  install.sh
cmake/: IMGUI.cmake  SDL3.cmake  VJOY.cmake
deck/: CMakeLists.txt  build.sh
deck/cmake/: SDL3.cmake
deck/include/: data.h  input.h  network.h
deck/src/: input.cpp  main.cpp  network.cpp
